3.4
	+ Send restartUI flag to restart service when restarting a module
	  from the UI
	+ Fix calculation of page number when using go to last page control
	+ Update tracker url in dashboard widget
	+ Continue installation without ads if there is a error getting them
	+ Added EBox::WebAdmin::Middleware::SubAppAuth to validate
	  WebAdmin sub-app requests
	+ Ported restricted resources to use nginx
	+ Removed EBox::Base::upload method because that's 100% handled by Plack
	  now.
	+ Increased the buffer size for uwsgi applications to allow big submits
	  like the one from automatic error report
	+ Added a UnhandledError middleware to catch any die or exception not
	  handled by Zentyal
	+ Added a Devel::StackTrace helper view that shows pretty backtraces
	+ Enable crash reports by default
	+ Added template for download link
	+ Created EBox::Util::Certificate, refactored create-certificate
	  script
	+ Changes in haproxy port validation and allow haproxy internal services
	+ Restore AdminPort model for WebAdmin to improve usability
	+ Added EBox::Module::Config::replicationExcludeKeys()
	+ Added EBox::WebAdmin::PortObserver to be used by ha and
	  remoteservices modules by the moment
	+ Added EBox::GlobalImpl::addModuleToPostSave to save modules
	  after normal save changes process
	+ Added a way for HAProxy to retrieve the CA certificate entry that should
	  be used
	+ Added a left-right composite layout
	+ Search and pagination forms can be omitted using showFilterForm
	  and showPaginationForm properties
	+ Show nice error when global-action fails using die + scalar
	+ EBox::Util::Random now accepts a set of chars to have a random string
	+ Notify HA when a module which must have a single instance in the
	  cluster is enabled/disabled.
	+ Added enabled action to /etc/init.d/zentyal to display whether a
	  module is enabled or disabled
	+ Pass model, type and id to enabled subroutine in
	  EBox::Types::MultiStateAction to be ortoghonal to handler property